ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress
spec:
  rules:
  - host: wordpress.34.141.45.51.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
